[package]
name = "vinesweeper"
version = "0.1.0"
authors = ["pesk <laura.peskin@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
rapier2d = { version = "0.17.2", features = [ "simd-stable", "wasm-bindgen" ] }
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["CanvasRenderingContext2d", "Document", "HtmlCanvasElement", "Window"] }

[profile.dev.package.rapier2d]
opt-level = 3

[profile.release]
codegen-units = 1